--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 # Godot-specific ignores
 .import/
 export.cfg
-export_presets.cfg
 
 # Imported translations (automatically generated from CSV files)
 *.translation.godot/
@@ -21,3 +20,5 @@ Exports/
 # IDE and OS specific
 .idea/
 .DS_Store
+
+export/
